# dolipy

./: .gitignore  README.md  pyproject.toml  readme.md
dolipy/: config.py  dolibarr.py
